@@ -1,3 +1,11 @@
+2004-07-08  David Hyatt  <hyatt@apple.com>
+
+	Fix for 3721453, CSS3 initial property caused crashes because the macros were not written correctly.
+	
+        Reviewed by john
+
+        * khtml/css/cssstyleselector.cpp:
+
 === Safari-151 ===
 
 2004-07-07  David Hyatt  <hyatt@apple.com>
